<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu_utama"
    tools:context="com.jemberonlineservice.studentdaily.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/emptydp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/NamaPelajar"
                    android:text="@string/NamaPelajar"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textColor="@color/NamaFont"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TagPelajar"
                    android:text="@string/TagPelajar"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textColor="@color/NamaFont"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/NamaSekolah"
                    android:text="@string/NamaSekolah"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textColor="@color/NamaFont"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_150sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutjadwal"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_30sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/HTxJadwal"
                    android:textStyle="bold"
                    android:textColor="@color/fontmatkul"/>

                <ImageView
                    android:id="@+id/btn_jadwal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:onClick="jadwalClick"
                    android:src="@drawable/ic_jadwal"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_55sdp"
                android:id="@+id/linearLayouttugas"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/HTxTugas"
                    android:textStyle="bold"
                    android:textColor="@color/fontmatkul"/>

                <ImageView
                    android:id="@+id/btn_tugas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:onClick="tugasClick"
                    android:src="@drawable/ic_tugas"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutcatatan"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_30sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:text="@string/HTxCatatan"
                    android:textColor="@color/fontmatkul"/>

                <ImageView
                    android:id="@+id/btn_catatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="catatanClick"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:src="@drawable/ic_catatan"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_55sdp"
                android:id="@+id/linearLayouttentang"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:text="@string/HTxTentang"
                    android:textColor="@color/fontmatkul"/>

                <ImageView
                    android:id="@+id/btn_tentang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:onClick="tentangClick"
                    android:src="@drawable/ic_tentang"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
